# drivesort

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-05-backend-foundation.md  2026-06-06-frontend.md
docs/superpowers/specs/: 2026-06-05-web-ui-design.md
drivesort/: bootstrap.py  cli.py  cluster_cache.py  clusterer.py  content_extractor.py  draft.py  drive.py  embedder.py  llm_name_cache.py  scanner.py  server.py  taxonomy.py  taxonomy_v2.py  ws.py
drivesort/api/: analysis.py  auth.py  cache.py  draft.py  files.py  scan.py  stage.py  taxonomy.py  ws.py
handoff/: 00_index.md  01_project_overview.md  02_architecture.md  03_design_decisions.md  04_codebase_reference.md  05_known_issues_and_next_steps.md  06_drive_context.md
tests/: test_api_analysis.py  test_api_auth.py  test_api_cache.py  test_api_files.py  test_api_scan.py  test_api_taxonomy.py  test_cluster_cache.py  test_content_extractor.py  test_draft.py  test_taxonomy.py  test_taxonomy_v2.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: TopBar.tsx
web/src/lib/: api.ts  types.ts  useWebSocket.ts
web/src/pages/: Scan.tsx  Status.tsx
web/src/pages/setup/: Analyse.tsx  Commit.tsx  Connect.tsx  Review.tsx
